--- a/ThesisProject/Views/Home/Homepage.cshtml
+++ b/ThesisProject/Views/Home/Homepage.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model LoginModel
+
 @section Styles{
     <link rel="stylesheet" href="~/css/HomepageStyle.css" />
     <link rel="stylesheet" href="~/css/MenuStyle.css" />
@@ -6,7 +7,7 @@
 
 }
 
-
+<!--Side Menu-->
 <body>
     <nav class="sidebar close">
         <header>
@@ -75,8 +76,16 @@
             </div>
         </div>
     </nav>
+
+    <!--Main Section-->
     <section class="home">
-        <div class="text">Homepage</div>
+        <div class="header">
+            <div class="text title">Homepage</div>
+            <div class ="username">@Html.DisplayFor(model=>model.username) </div>
+        </div>
+        <div class="main">
+
+        </div>
     </section>
     <script>
         const body = document.querySelector('body'),
