--- a/ThesisProject/wwwroot/css/LoginStyle.css
+++ b/ThesisProject/wwwroot/css/LoginStyle.css
@@ -8,29 +8,37 @@
 }
 :root {
     --light-blue: #c1e3fe;
+    --light-pink: #f5c0e0;
 }
 
-
-.container {
-    margin:0;
+.container{
+    width:100%;
+}
+.page {
     position:relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     width: 100%;
     align-items:center;
     justify-content:space-between;
 }
 
 .sign-in-form {
-    width: 100%;
     min-height: 100vh;
     height:80%;
-
-    border-radius:30px;
     margin: 2%;
-    background-color: var(--light-blue);
+    flex:1;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+}
+
+h1{
+    margin-bottom:2%;
 }
 .form{  
+
     width:100%;
     display :flex;
     flex-direction:column;
@@ -44,10 +52,65 @@
 }
 
 
-.image-container{
-    display:flex;
-    flex-direction:column;
-    align-items:flex-end;
+.image-container {
+    display: flex;
+    width: 100%;
+    height:110vh;
+    flex-direction: column;
+    flex: 2;
+    align-items:center;
+    justify-content:center;
+    background-image: url('/Images/pink-shape.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
+
+.input{
+    margin:1%;
+    padding:2%;
+    border-radius:15px;
+    width:80%;
+    order:2;
+}
+
+.input:focus{
+    outline-color:var(--light-blue);
+    transition:0.3s ;
+}
+.inputs{
+    width:100%;
+    display:flex;
+justify-content:center}
+
+.submit-btn{
+    margin-top:2%;
+    width:30%;
+    padding:1.5%;
+    border-radius:15px;
+    transition:all 0.3s;
+    background-color:#c1e3fe;
+    border:none;
+
+}
+    .submit-btn:hover {
+        transform: scale(1.05);
+        cursor: pointer;
+    }
+
+.register{
+    text-align:center;
+}
+h4{
+    margin-top:10%;
+}
+h5{
+    color:var(--light-pink);
+    cursor:pointer;
+}
+.error{
+    display:none;
+}
+
+
 
 
