--- a/ThesisProject/wwwroot/css/HomepageStyle.css
+++ b/ThesisProject/wwwroot/css/HomepageStyle.css
@@ -22,4 +22,20 @@
 .header{
     display:flex;
     flex-direction:row;
+
+}
+
+.right-corner{
+    position: absolute;
+    right: 2%;
+    top: 2%;
+    font-size: 15px;
+    display:flex;
+    width:150px;
+    justify-content:space-between;
+
+}
+
+.song-managing{
+
 }
