--- a/ThesisProject/Views/Home/Homepage.cshtml
+++ b/ThesisProject/Views/Home/Homepage.cshtml
@@ -84,7 +84,7 @@
             <div class="text title">Homepage</div>
             <div class="right-corner">
                 <img src="~/Resources/icons8-male-user-24 (1).png"></img>
-                <div class="username">@Html.DisplayFor(model=>model.username) </div>
+                <div class="smalltext username ">@Html.DisplayFor(model=>model.username) </div>
             </div>
         </div>
         <div class="main">
@@ -93,7 +93,12 @@
 
 
         <div class="song-managing">
-
+            <div class="buttons">
+                <i class='bx bx-skip-previous'></i>
+                <i class='bx bx-pause pause'></i>
+                <i class='bx bx-play bx-flip-vertical play'></i>
+                <i class='bx bx-skip-next'></i>
+            </div>
         </div>
 
     </section>
