created 2 more pages and fixed navigation

--- a/ThesisProject/Views/Home/Moods.cshtml
+++ b/ThesisProject/Views/Home/Moods.cshtml
@@ -1,11 +1,12 @@
-﻿@model LoginModel
+﻿@model UserModel
 
 @section Styles{
-    <link rel="stylesheet" href="~/css/HomepageStyle.css" />
+    <link rel="stylesheet" href="~/css/MoodsStyle.css" />
     <link rel="stylesheet" href="~/css/MenuStyle.css" />
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
 }
+
 
 <!--Side Menu-->
 <body>
@@ -30,7 +31,7 @@
                 </li>
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a class="homebtn" href="#">
+                        <a class="homebtn" asp-controller="Home" asp-route-username="@ViewBag.username" asp-action="Homepage">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Homepage</span>
                         </a>
@@ -42,7 +43,7 @@
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a class="moodbtn" asp-controller="Home" asp-route-username="@ViewBag.username" asp-action="Moods">
+                        <a class="moodbtn" href="#">
                             <i class='bx bx-happy-alt icon'></i>
                             <span class="text nav-text">Moods</span>
                         </a>
@@ -52,7 +53,7 @@
                             <i class='bx bx-male icon'></i>
                             <span class="text nav-text">Profile</span>
                         </a>
-                    </li>                    
+                    </li>
                 </ul>
             </div>
             <div class="bottom-content">
@@ -81,14 +82,14 @@
     <section class="home">
 
         <div class="header">
-            <div class="text title">Homepage</div>
+            <div class="text title">Moods</div>
             <div class="right-corner">
                 <img src="~/Resources/icons8-male-user-24 (1).png"></img>
-                <div class="smalltext username ">@Html.DisplayFor(model=>model.username) </div>
+               
+                <div class="smalltext username ">@ViewBag.username </div>
             </div>
         </div>
         <div class="main">
-
         </div>
 
 
@@ -103,9 +104,7 @@
 
     </section>
 
-
-
-
+    
     <!--Javascripts-->
     <script>
         function Hide(){
@@ -153,5 +152,4 @@
         
     </script>
 </body>
-
 
