--- a/ThesisProject/Views/Home/Profile.cshtml
+++ b/ThesisProject/Views/Home/Profile.cshtml
@@ -1,11 +1,12 @@
-﻿@model LoginModel
+﻿@model UserModel
 
 @section Styles{
-    <link rel="stylesheet" href="~/css/HomepageStyle.css" />
+    <link rel="stylesheet" href="~/css/MoodsStyle.css" />
     <link rel="stylesheet" href="~/css/MenuStyle.css" />
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
 }
+
 
 <!--Side Menu-->
 <body>
@@ -30,13 +31,13 @@
                 </li>
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a class="homebtn" href="#">
+                        <a class="homebtn" asp-controller="Home" asp-route-username="@ViewBag.username" asp-action="Homepage">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Homepage</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a class="favbtn" asp-controller="Home" asp-route-username="@ViewBag.username" asp-action="Favorites">
+                        <a class="favbtn" asp-controller="Home" asp-route-username="@ViewBag.username" asp-action="Profile">
                             <i class='bx bx-heart icon'></i>
                             <span class="text nav-text">Favorites</span>
                         </a>
@@ -48,11 +49,11 @@
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a class="profbtn" asp-controller="Home" asp-route-username="@ViewBag.username" asp-action="Profile">
+                        <a class="profbtn" href="#">
                             <i class='bx bx-male icon'></i>
                             <span class="text nav-text">Profile</span>
                         </a>
-                    </li>                    
+                    </li>
                 </ul>
             </div>
             <div class="bottom-content">
@@ -81,14 +82,14 @@
     <section class="home">
 
         <div class="header">
-            <div class="text title">Homepage</div>
+            <div class="text title">Your Profile</div>
             <div class="right-corner">
                 <img src="~/Resources/icons8-male-user-24 (1).png"></img>
-                <div class="smalltext username ">@Html.DisplayFor(model=>model.username) </div>
+
+                <div class="smalltext username ">@ViewBag.username </div>
             </div>
         </div>
         <div class="main">
-
         </div>
 
 
@@ -104,26 +105,24 @@
     </section>
 
 
-
-
     <!--Javascripts-->
     <script>
-        function Hide(){
-            
+        function Hide() {
+
             const play = document.querySelector('[class*=play]');
             const pause = document.querySelector('[class*=pause]');
-            if (play.style.display === 'block' && pause.style.display==='none') {
-                play.style.display='none';
-                pause.style.display='block';
-                            }
+            if (play.style.display === 'block' && pause.style.display === 'none') {
+                play.style.display = 'none';
+                pause.style.display = 'block';
+            }
             else {
                 play.style.display = 'block';
                 pause.style.display = 'none';
             }
 
-           
+
         }
-        
+
         const body = document.querySelector('body'),
             sidebar = body.querySelector('nav'),
             toggle = body.querySelector(".toggle"),
@@ -131,7 +130,7 @@
             modeSwitch = body.querySelector(".toggle-switch"),
             modeText = body.querySelector(".mode-text"),
             buttonplay = body.querySelector(".play"),
-            buttonpause=body.querySelector(".pause");
+            buttonpause = body.querySelector(".pause");
 
         toggle.addEventListener("click", () => {
             sidebar.classList.toggle("close");
@@ -150,7 +149,7 @@
             }
         });
 
-        
+
     </script>
 </body>
 
