--- a/ThesisProject/Views/Home/Homepage.cshtml
+++ b/ThesisProject/Views/Home/Homepage.cshtml
@@ -84,7 +84,7 @@
             <div class="text title">Homepage</div>
             <div class="right-corner">
                 <img src="~/Resources/icons8-male-user-24 (1).png"></img>
-                <div class="smalltext username ">@Html.DisplayFor(model=>model.username) </div>
+                <div class="smalltext username ">@ViewBag.username </div>
             </div>
         </div>
         <div class="main">
