--- a/ThesisProject/wwwroot/css/MoodsStyle.css
+++ b/ThesisProject/wwwroot/css/MoodsStyle.css
@@ -33,9 +33,42 @@
     width: 150px;
     justify-content: space-between;
 }
+.home{
+    height:100%;
+    display:flex;
+    flex-direction:column;
+    width:100%;
+
+
+}
+
+.main{
+    width:100%;
+    height:100%;
+    display:flex;
+    flex-direction:row;
+}
+.containers{
+    width:100%;
+    height:100%;
+}
+    .left-container{
+        display:flex;
+        flex-direction:column;       
+
+    }
+    .left-container .left-up,.left-down{
+        height:100%;
+        width:100%;
+        border-radius:20px;
+        background-color:var(--yellow);
+        margin-left: 8% ;
+        margin-bottom:5%;
+        
+        
+    }
 
 .song-managing {
-    position: absolute;
     width: 97%;
     background-color: var(--primary-color-light);
     bottom: 0;
@@ -46,6 +79,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top:auto;
 }
 
 .buttons {
