tested audio - not working

--- a/ThesisProject/wwwroot/css/PlaylistsStyle.css
+++ b/ThesisProject/wwwroot/css/PlaylistsStyle.css
@@ -87,6 +87,10 @@ table{
     }
 
 
+.song:hover{
+    cursor:pointer;
+}
+
 .song-managing {
     width: 97%;
     background-color: var(--primary-color-light);
