--- a/ThesisProject/Views/Home/Playlists.cshtml
+++ b/ThesisProject/Views/Home/Playlists.cshtml
@@ -96,6 +96,7 @@
                     {
                         <thead>
                             <tr>
+                                <td></td>
                                 <td class="sname h  text">Song</td>
                                 <td class="artist h text">Artist</td>
                                 <td class="duration  h text">Duration</td>
@@ -105,13 +106,15 @@
                         @foreach (var item in Model)
                         {
 
-                            <tr>
+                            <tr class="song" onclick="playAudio('@item.songfile')">
+                                <td>
+                                    <i class='bx bx-play bx-flip-vertical'></i>
+                                </td>
                                 <td class="sname text">@item.songname</td>
                                 <td class="artist text">@item.artist</td>
                                 <td class="duration text">@item.duration</td>
                                 <td><i class='bx bx-heart icon'></i></td>
-                                
-                                
+                               
                             </tr>
                         }
                     }
@@ -126,6 +129,9 @@
 
 
         <div class="song-managing">
+            <audio class="audio" id="audioplayer">
+
+            </audio>
             <div class="buttons">
                 <i class='bx bx-skip-previous'></i>
                 <i class='bx bx-pause pause' onclick="Hide()"></i>
@@ -154,6 +160,17 @@
 
 
         }
+
+
+
+        function playAudio(source) {
+            const audioPlayer = document.getElementById('audioplayer');
+            audioPlayer.pause();
+            audioPlayer.src = source;
+            audioPlayer.play();
+        }
+
+
 
         const body = document.querySelector('body'),
             sidebar = body.querySelector('nav'),
