--- a/ThesisProject/Views/Home/Playlists.cshtml
+++ b/ThesisProject/Views/Home/Playlists.cshtml
@@ -100,21 +100,21 @@
                                 <td class="sname h  text">Song</td>
                                 <td class="artist h text">Artist</td>
                                 <td class="duration  h text">Duration</td>
+                                <td ></td>
                             </tr>
                             
                         </thead>
                         @foreach (var item in Model)
                         {
 
-                            <tr class="song" onclick="playAudio('@item.songfile')">
-                                <td>
-                                    <i class='bx bx-play bx-flip-vertical'></i>
+                            <tr class="song" >
+                                <td onclick="playAudio('@item.songfile')" class=" play" >
+                                    <i class='bx bx-play bx-flip-vertical buttons'></i>
                                 </td>
                                 <td class="sname text">@item.songname</td>
                                 <td class="artist text">@item.artist</td>
                                 <td class="duration text">@item.duration</td>
-                                <td><i class='bx bx-heart icon'></i></td>
-                               
+                                <td class="heart"><i class='bx bx-heart icon buttons'></i></td>
                             </tr>
                         }
                     }
@@ -129,8 +129,7 @@
 
 
         <div class="song-managing">
-            <audio class="audio" id="audioplayer">
-
+            <audio class="audio" id="audioplayer" controls>
             </audio>
             <div class="buttons">
                 <i class='bx bx-skip-previous'></i>
@@ -163,12 +162,22 @@
 
 
 
-        function playAudio(source) {
+         function playAudio(source) {
             const audioPlayer = document.getElementById('audioplayer');
-            audioPlayer.pause();
-            audioPlayer.src = source;
-            audioPlayer.play();
+            const play = document.querySelector('[class*=play]');
+            const pause = document.querySelector('[class*=pause]');
+
+            if(!audioPlayer.paused){
+                audioPlayer.pause();
+            }            
+                
+            else{
+                audioPlayer.src = source;
+                audioPlayer.play();
+            }
+            
         }
+        
 
 
 
