--- a/ThesisProject/Views/Home/Playlists.cshtml
+++ b/ThesisProject/Views/Home/Playlists.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SongModel>
+﻿@model List<(SongModel Song, bool isLiked)>
 
 @section Styles{
 
@@ -91,11 +91,16 @@
         </div>
         <div class="main">
             <div class="song-list">
+
+                <audio class="audio" id="audioplayer">
+                </audio>
+
                 <table>
                     @if (Model.Count() != 0)
                     {
                         <thead>
                             <tr>
+
                                 <td></td>
                                 <td class="sname h  text">Song</td>
                                 <td class="artist h text">Artist</td>
@@ -106,15 +111,30 @@
                         </thead>
                         @foreach (var item in Model)
                         {
+                            
+                            <tr class="song" >                            
+                                
+                                <td>
+                                    <span class="play-icon" onclick="playAudio('@item.Song.songfile',this)">
+                                        <i class='bx bx-play bx-flip-vertical' ></i>
 
-                            <tr class="song" >
-                                <td onclick="playAudio('@item.songfile')" class=" play" >
-                                    <i class='bx bx-play bx-flip-vertical buttons'></i>
-                                </td>
-                                <td class="sname text">@item.songname</td>
-                                <td class="artist text">@item.artist</td>
-                                <td class="duration text">@item.duration</td>
-                                <td class="heart"><i class='bx bx-heart icon buttons'></i></td>
+                                    </span>
+                                    <span class="pause-icon hidden" onclick="playAudio('@item.Song.songfile',this)" style="display:none" >
+                                        <i class='bx bx-pause'></i>
+                                    </span>
+                                </td>                                
+                                                                                              
+                                <td class="sname text">@item.Song.songname</td>
+                                <td class="artist text">@item.Song.artist</td>
+                                <td class="duration text">@item.Song.duration</td>
+                                @if (!item.isLiked)
+                                {
+                                    <td class="heart"><i class='bx bx-heart icon buttons'></i></td>
+                                }
+                                else
+                                {
+                                    <td class="full-heart"><i class='bx bxs-heart icon buttons'></i></td>
+                                }
                             </tr>
                         }
                     }
@@ -129,8 +149,7 @@
 
 
         <div class="song-managing">
-            <audio class="audio" id="audioplayer" controls>
-            </audio>
+            
             <div class="buttons">
                 <i class='bx bx-skip-previous'></i>
                 <i class='bx bx-pause pause' onclick="Hide()"></i>
@@ -144,42 +163,61 @@
 
     <!--Javascripts-->
     <script>
-        function Hide() {
+        //function Hide() {
 
-            const play = document.querySelector('[class*=play]');
-            const pause = document.querySelector('[class*=pause]');
-            if (play.style.display === 'block' && pause.style.display === 'none') {
-                play.style.display = 'none';
-                pause.style.display = 'block';
-            }
-            else {
-                play.style.display = 'block';
-                pause.style.display = 'none';
-            }
-
-
-        }
+        //    const play = document.querySelector('[class*=play]');
+        //    const pause = document.querySelector('[class*=pause]');
+        //    if (play.style.display === 'block' && pause.style.display === 'none') {
+        //        play.style.display = 'none';
+        //        pause.style.display = 'block';
+        //    }
+        //    else {
+        //        play.style.display = 'block';
+        //        pause.style.display = 'none';
+        //    }
 
 
+        //}
 
-         function playAudio(source) {
-            const audioPlayer = document.getElementById('audioplayer');
-            const play = document.querySelector('[class*=play]');
-            const pause = document.querySelector('[class*=pause]');
 
-            if(!audioPlayer.paused){
+         function playAudio(source,element) {
+
+            var audioPlayer = document.getElementById('audioplayer');
+            var playIcon = element.getElementsByClassName('bx-play')[0];
+            var pauseIcon = element.getElementsByClassName('bx-pause')[0];
+
+
+            if (!audioPlayer.paused ) {
                 audioPlayer.pause();
-            }            
-                
-            else{
-                audioPlayer.src = source;
+                pauseIcon.classList.add('hidden');
+                playIcon.classList.remove('hidden')
+
+            }
+            else if (audioPlayer.paused) {
+                audioPlayer.src=source;
                 audioPlayer.play();
+                pauseIcon.classList.remove('hidden');
+                playIcon.classList.add('hidden');
             }
             
+
+            //
+            //var element = element.currentTarget;
+
+            //if(audioPlayer.paused){
+            //    audioPlayer.src = source;                
+            //    audioPlayer.play();
+            //    element.getElementsByClassName('play-button')[0].style.display = 'none';
+            //    document.getElementsByClassName('pause-button').style.display = 'inline';
+            //}                   
+                
+            //else {
+            //    audioPlayer.pause();
+            //    element.querySelector('.play-button').style.display = 'inline';
+            //    element.querySelector('pause-button').style.display = 'none';
+            //}
+            
         }
-        
-
-
 
         const body = document.querySelector('body'),
             sidebar = body.querySelector('nav'),
